--- a/css/style.css
+++ b/css/style.css
@@ -2,5 +2,59 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+body {
+    background-color: #eeeeee;
+}
+
+/* COMMON */
+.container {
+    width: 70%;
+    margin: 0 auto;
+    background-color: #ffffff;
+    padding: 20px 60px;
+    
+}
+
+/* HEADER */
+.header-container {
+    background-color: #ffffff;
+    height: 80px;
+    line-height: 80px;
+    font-size: 2.5em;
+    font-weight: 700;
+    padding-left: 3%;
+    margin-bottom: 50px;
+}
+
+.header-logo {
+    vertical-align: middle;
+    padding-bottom: 10px;
+}
+
+/* NAV */
+.top-section {
+    border-radius: 10px 10px 0px 0px;
+    margin-bottom: 2px;
+}
+
+.button {
+    padding: 10px;
+    border: 2px solid;
+    border-radius: 7px;
+    font-weight: 700;
+}
+
+.active-button {
+    color: #ffffff;
+    background-color: #5dbeff;
+    border-color: #52baff;
+}
+
+.inactive-button {
+    color: #dfdfdf;
+    background-color: #ffffff;
+    border-color: #dfdfdf;
+}
