--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,9 @@ body {
     background-color: #eeeeee;
 }
 
+
 /* COMMON */
+
 .container {
     width: 70%;
     margin: 0 auto;
@@ -18,7 +20,9 @@ body {
     
 }
 
+
 /* HEADER */
+
 .header-container {
     background-color: #ffffff;
     height: 80px;
@@ -34,14 +38,16 @@ body {
     padding-bottom: 10px;
 }
 
+
 /* NAV */
+
 .top-section {
-    border-radius: 10px 10px 0px 0px;
+    border-radius: 10px 10px 0 0;
     margin-bottom: 2px;
 }
 
 .button {
-    padding: 10px;
+    padding: 6px 10px;
     border: 2px solid;
     border-radius: 7px;
     font-weight: 700;
@@ -57,4 +63,89 @@ body {
     color: #dfdfdf;
     background-color: #ffffff;
     border-color: #dfdfdf;
+}
+
+
+/* CONTENT */
+
+.bottom-section {
+    border-radius: 0 0 10px 10px;
+}
+
+ul {
+    list-style: none;
+    color: #36343a;
+    line-height: 2.5em;
+}
+
+ul.main {
+    font-weight: 600;
+    
+}
+
+li.ul-main::before {
+    content: "\23f7";
+}
+
+ul.secondary {
+    font-size: .9em;
+    font-weight: 500;
+    padding-left: 1%;
+}
+
+li.done::before {
+    content: "\2713";
+    color: #099b09;
+    padding-left: 3px;
+    padding-right: 3px;
+    border: 1px solid #099b09;
+    border-radius: 50%;
+}
+
+li.todo::before {
+    content: "\2717";
+    color: #cc2525;
+    padding-left: 3px;
+    padding-right: 3px;
+    border: 1px solid #cc2525;
+    border-radius: 50%;
+}
+
+
+/* ETICHETTE */
+
+li.editorial::after {
+    content: "Editorial";
+    color: #ffffff;
+    background-color: #52baff;
+    border-radius: 15px;
+    font-size: .7em;
+    padding: .6em 1em;
+}
+
+li.q1goals::after {
+    content: "Q1 Goals";
+    color: #ffffff;
+    background-color: #ab52ff;
+    border-radius: 15px;
+    font-size: .7em;
+    padding: .6em 1em;
+}
+
+li.recruiting::after {
+    content: "Recruiting";
+    color: #ffffff;
+    background-color: #2bbd85;
+    border-radius: 15px;
+    font-size: .7em;
+    padding: .6em 1em;
+}
+
+li.mobile::after {
+    content: "Mobile";
+    color: #ffffff;
+    background-color: #ffaf37;
+    border-radius: 15px;
+    font-size: .7em;
+    padding: .6em 1em;
 }
