--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ ul.secondary {
     font-size: .9em;
     font-weight: 500;
     padding-left: 1%;
+    margin-bottom: 15px;
 }
 
 li.done::before {
